--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -9,24 +9,31 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:weightSum="10">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="4"
+            android:layout_height="0dp"
+            android:layout_weight="1"
             android:orientation="vertical">
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="8dp"
-                android:layout_marginTop="16dp"
+                android:layout_marginTop="8dp"
                 android:text="휴대폰 번호로 로그인하세요!"
                 android:textSize="24dp"
                 android:textStyle="bold" />
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="   010 부터 입력"
+                android:layout_marginTop="2dp"
+                android:textSize="16dp"/>
 
-            <LinearLayout
+            <!--<LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_margin="16dp"
@@ -43,14 +50,14 @@
                     android:layout_height="wrap_content"
                     android:entries="@array/city"
                     android:scrollbarSize="24dp"></Spinner>
-            </LinearLayout>
+            </LinearLayout>-->
 
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
+            android:layout_height="0dp"
+            android:layout_weight="9"
             android:orientation="vertical">
 
             <TextView
@@ -68,7 +75,6 @@
                 <TableLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_margin="3dp"
                     android:gravity="center"
                     android:stretchColumns="*">
 
@@ -76,28 +82,65 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent">
 
-                        <TextView
+                       <!-- <TextView
                             android:id="@+id/one"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_margin="8dp"
                             android:background="@drawable/oneone"
-                            android:gravity="center" />
-
-                        <TextView
-                            android:id="@+id/two"
+                            android:gravity="center" />-->
+                        <ImageButton
+                            android:id="@+id/button1"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_margin="8dp"
-                            android:background="@drawable/twotwo"
-                            android:gravity="center" />
+                            android:layout_margin="2dp"
+                            android:gravity="center"
+                            android:src="@drawable/oneone"
+                            />
 
-                        <TextView
-                            android:id="@+id/three"
+                        <ImageButton
+                            android:id="@+id/button2"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_margin="8dp"
-                            android:background="@drawable/threethree"
+                            android:layout_margin="2dp"
+                            android:src="@drawable/twotwo"
+                            android:gravity="center" />
+
+                        <ImageButton
+                            android:id="@+id/button3"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_margin="2dp"
+                            android:gravity="center"
+                            android:src="@drawable/threethree"/>
+                    </TableRow>
+
+                    <TableRow
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent">
+
+                        <ImageButton
+                            android:id="@+id/button4"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_margin="2dp"
+                            android:src="@drawable/four"
+                            android:gravity="center" />
+
+                        <ImageButton
+                            android:id="@+id/button5"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_margin="2dp"
+                            android:src="@drawable/five"
+                            android:gravity="center" />
+
+                        <ImageButton
+                            android:id="@+id/button6"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_margin="2dp"
+                            android:src="@drawable/six"
                             android:gravity="center" />
                     </TableRow>
 
@@ -105,57 +148,28 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent">
 
-                        <TextView
-                            android:id="@+id/four"
+                        <ImageButton
+                            android:id="@+id/button7"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_margin="8dp"
-                            android:background="@drawable/four"
+                            android:layout_margin="2dp"
+                            android:src="@drawable/seven"
                             android:gravity="center" />
 
-                        <TextView
-                            android:id="@+id/five"
+                        <ImageButton
+                            android:id="@+id/button8"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_margin="8dp"
-                            android:background="@drawable/five"
+                            android:layout_margin="2dp"
+                            android:src="@drawable/eight"
                             android:gravity="center" />
 
-                        <TextView
-                            android:id="@+id/six"
+                        <ImageButton
+                            android:id="@+id/button9"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_margin="8dp"
-                            android:background="@drawable/six"
-                            android:gravity="center" />
-                    </TableRow>
-
-                    <TableRow
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent">
-
-                        <TextView
-                            android:id="@+id/seven"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_margin="8dp"
-                            android:background="@drawable/seven"
-                            android:gravity="center" />
-
-                        <TextView
-                            android:id="@+id/eight"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_margin="8dp"
-                            android:background="@drawable/eight"
-                            android:gravity="center" />
-
-                        <TextView
-                            android:id="@+id/nine"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_margin="8dp"
-                            android:background="@drawable/nine"
+                            android:layout_margin="2dp"
+                            android:src="@drawable/nine"
                             android:gravity="center" />
                     </TableRow>
 
@@ -163,28 +177,28 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent">
 
-                        <TextView
-                            android:id="@+id/reset"
+                        <ImageButton
+                            android:id="@+id/button10"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_margin="8dp"
-                            android:background="@drawable/reset"
+                            android:layout_margin="2dp"
+                            android:src="@drawable/reset"
                             android:gravity="center" />
 
-                        <TextView
-                            android:id="@+id/zero"
+                        <ImageButton
+                            android:id="@+id/button0"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_margin="8dp"
-                            android:background="@drawable/zero"
+                            android:layout_margin="2dp"
+                            android:src="@drawable/zero"
                             android:gravity="center" />
 
-                        <TextView
-                            android:id="@+id/back"
+                        <ImageButton
+                            android:id="@+id/button11"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_margin="8dp"
-                            android:background="@drawable/deletedeletedelete"
+                            android:layout_margin="2dp"
+                            android:src="@drawable/deletedeletedelete"
                             android:gravity="center" />
                     </TableRow>
                 </TableLayout>
@@ -199,7 +213,7 @@
                         android:layout_height="wrap_content"
                         android:text="Enter" />
                     <Button
-                        android:id="@+id/register"
+                        android:id="@+id/login_goToRegister"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="회원 가입"/>
