--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,8 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Login"
-    android:background="@drawable/background">
+    android:background="@drawable/background"
+    tools:context=".Login">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -15,7 +16,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="1"
+            android:layout_weight="1.5"
             android:orientation="vertical">
 
             <TextView
@@ -24,40 +25,22 @@
                 android:layout_marginLeft="8dp"
                 android:layout_marginTop="8dp"
                 android:text="휴대폰 번호로 로그인하세요!"
-                android:textSize="24dp"
+                android:textSize="30dp"
                 android:textStyle="bold" />
+
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="   010 부터 입력"
-                android:layout_marginTop="2dp"
-                android:textSize="16dp"/>
-
-            <!--<LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_margin="16dp"
-                android:orientation="vertical">
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="단골 +" />
-
-                <Spinner
-                    android:id="@+id/localSpinner"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:entries="@array/city"
-                    android:scrollbarSize="24dp"></Spinner>
-            </LinearLayout>-->
-
+                android:layout_marginTop="8dp"
+                android:text="   010 부터 입력하세요."
+                android:textColor="#CC9966"
+                android:textSize="24dp" />
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="9"
+            android:layout_weight="8.5"
             android:orientation="vertical">
 
             <TextView
@@ -76,43 +59,39 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="center"
+                    android:padding="8dp"
                     android:stretchColumns="*">
 
                     <TableRow
                         android:layout_width="match_parent"
                         android:layout_height="match_parent">
 
-                       <!-- <TextView
-                            android:id="@+id/one"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_margin="8dp"
-                            android:background="@drawable/oneone"
-                            android:gravity="center" />-->
                         <ImageButton
                             android:id="@+id/button1"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_margin="2dp"
+                            android:background="#00ff0000"
                             android:gravity="center"
-                            android:src="@drawable/oneone"
-                            />
+                            android:src="@drawable/oneone" />
 
                         <ImageButton
                             android:id="@+id/button2"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_margin="2dp"
-                            android:src="@drawable/twotwo"
-                            android:gravity="center" />
+                            android:background="#00ff0000"
+                            android:gravity="center"
+                            android:src="@drawable/twotwo" />
 
                         <ImageButton
                             android:id="@+id/button3"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_margin="2dp"
+                            android:background="#00ff0000"
                             android:gravity="center"
-                            android:src="@drawable/threethree"/>
+                            android:src="@drawable/threethree" />
                     </TableRow>
 
                     <TableRow
@@ -124,24 +103,27 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_margin="2dp"
-                            android:src="@drawable/four"
-                            android:gravity="center" />
+                            android:gravity="center"
+                            android:background="#00ff0000"
+                            android:src="@drawable/four" />
 
                         <ImageButton
                             android:id="@+id/button5"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_margin="2dp"
-                            android:src="@drawable/five"
-                            android:gravity="center" />
+                            android:gravity="center"
+                            android:background="#00ff0000"
+                            android:src="@drawable/five" />
 
                         <ImageButton
                             android:id="@+id/button6"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_margin="2dp"
-                            android:src="@drawable/six"
-                            android:gravity="center" />
+                            android:gravity="center"
+                            android:background="#00ff0000"
+                            android:src="@drawable/six" />
                     </TableRow>
 
                     <TableRow
@@ -153,24 +135,27 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_margin="2dp"
-                            android:src="@drawable/seven"
-                            android:gravity="center" />
+                            android:gravity="center"
+                            android:background="#00ff0000"
+                            android:src="@drawable/seven" />
 
                         <ImageButton
                             android:id="@+id/button8"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_margin="2dp"
-                            android:src="@drawable/eight"
-                            android:gravity="center" />
+                            android:gravity="center"
+                            android:background="#00ff0000"
+                            android:src="@drawable/eight" />
 
                         <ImageButton
                             android:id="@+id/button9"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_margin="2dp"
-                            android:src="@drawable/nine"
-                            android:gravity="center" />
+                            android:gravity="center"
+                            android:background="#00ff0000"
+                            android:src="@drawable/nine" />
                     </TableRow>
 
                     <TableRow
@@ -182,41 +167,46 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_margin="2dp"
-                            android:src="@drawable/reset"
-                            android:gravity="center" />
+                            android:gravity="center"
+                            android:background="#00ff0000"
+                            android:src="@drawable/reset" />
 
                         <ImageButton
                             android:id="@+id/button0"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_margin="2dp"
-                            android:src="@drawable/zero"
-                            android:gravity="center" />
+                            android:gravity="center"
+                            android:background="#00ff0000"
+                            android:src="@drawable/zero" />
 
                         <ImageButton
                             android:id="@+id/button11"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_margin="2dp"
-                            android:src="@drawable/deletedeletedelete"
-                            android:gravity="center" />
+                            android:background="#00ff0000"
+                            android:gravity="center"
+                            android:src="@drawable/deletedeletedelete" />
                     </TableRow>
                 </TableLayout>
 
                 <LinearLayout
-                    android:orientation="vertical"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent">
+                    android:layout_height="match_parent"
+                    android:orientation="vertical">
+
                     <Button
                         android:id="@+id/loginButton"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="Enter" />
+
                     <Button
                         android:id="@+id/login_goToRegister"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="회원 가입"/>
+                        android:text="회원 가입" />
                 </LinearLayout>
             </LinearLayout>
         </LinearLayout>
