--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -24,12 +24,25 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="bottom"
-                android:layout_marginTop="20dp"
+                android:layout_marginTop="16dp"
                 android:max="200"
                 android:maxWidth="40dp"
                 android:progress="50"
                 android:progressDrawable="@drawable/seekbar"
                 android:thumb="@drawable/cur" />
+            <TextView
+                android:id="@+id/curMoney"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textStyle="bold"/>
+            <Button
+                android:id="@+id/settingMoneyBtn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAlignment="center"
+                android:layout_gravity="right"
+                android:background="@drawable/buttonshape"
+                android:text="예산 설정하기"/>
 
         </LinearLayout>
 
@@ -39,13 +52,15 @@
             android:layout_height="0dp"
             android:layout_weight="4"
             android:orientation="vertical"
+            android:background="@drawable/layout_border"
             android:weightSum="10">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="1"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                >
 
                 <TextView
                     android:layout_width="0dp"
@@ -191,7 +206,8 @@
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:text="행사상품"
-                    android:textSize="16dp" />
+                    android:textSize="16dp"
+                    android:background="@drawable/buttonshape2"/>
 
                 <Button
                     android:id="@+id/buttonRecoItemCall"
@@ -199,7 +215,8 @@
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:text="추천상품"
-                    android:textSize="16dp" />
+                    android:textSize="16dp"
+                    android:background="@drawable/buttonshape2"/>
             </LinearLayout>
 
             <LinearLayout
@@ -211,7 +228,7 @@
                     android:id="@+id/imageView"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:src="@drawable/image1" />
+                    android:src="@drawable/bulgogi" />
             </LinearLayout>
 
         </LinearLayout>
