--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -11,38 +11,69 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:weightSum="10">
+        android:weightSum="11">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="2"
+            android:layout_weight="3"
+            android:weightSum="7"
             android:orientation="vertical">
+            <TextView
+                android:id="@+id/maxMoneyTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                android:hint="예산안"
+                android:layout_gravity="right"
+                android:textSize="16dp"
+                android:textStyle="bold"
+                android:layout_marginRight="16dp"/>
 
             <SeekBar
                 android:id="@+id/seekBar1"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="0dp"
                 android:layout_gravity="bottom"
-                android:layout_marginTop="16dp"
                 android:max="200"
                 android:maxWidth="40dp"
                 android:progress="50"
                 android:progressDrawable="@drawable/seekbar"
-                android:thumb="@drawable/cur" />
-            <TextView
-                android:id="@+id/curMoney"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textStyle="bold"/>
+                android:layout_weight="3"
+                android:thumb="@drawable/cur"/>
+<!--
+            <ProgressBar
+                android:id="@+id/progress"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="3"
+                style="@android:style/Widget.ProgressBar.Horizontal"
+                android:progress="20"
+                />
+-->
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/curMoney"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textStyle="bold"
+                    android:hint="현재 금액 "/>
+            </LinearLayout>
+
             <Button
                 android:id="@+id/settingMoneyBtn"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAlignment="center"
+                android:layout_height="0dp"
                 android:layout_gravity="right"
+                android:layout_weight="2"
                 android:background="@drawable/buttonshape"
-                android:text="예산 설정하기"/>
+                android:text="예산 설정하기"
+                android:textAlignment="center" />
 
         </LinearLayout>
 
@@ -51,16 +82,15 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="4"
-            android:orientation="vertical"
             android:background="@drawable/layout_border"
+            android:orientation="vertical"
             android:weightSum="10">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="1"
-                android:orientation="horizontal"
-                >
+                android:orientation="horizontal">
 
                 <TextView
                     android:layout_width="0dp"
@@ -171,8 +201,8 @@
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:layout_weight="0.5"
-                            android:textAlignment="center"
-                            android:text="삭제" />
+                            android:text="삭제"
+                            android:textAlignment="center" />
                     </TableRow>
                 </TableLayout>
 
@@ -205,18 +235,18 @@
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
+                    android:background="@drawable/buttonshape2"
                     android:text="행사상품"
-                    android:textSize="16dp"
-                    android:background="@drawable/buttonshape2"/>
+                    android:textSize="16dp" />
 
                 <Button
                     android:id="@+id/buttonRecoItemCall"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
+                    android:background="@drawable/buttonshape2"
                     android:text="추천상품"
-                    android:textSize="16dp"
-                    android:background="@drawable/buttonshape2"/>
+                    android:textSize="16dp" />
             </LinearLayout>
 
             <LinearLayout
