--- a/app/src/main/res/layout/in_cart_list_item.xml
+++ b/app/src/main/res/layout/in_cart_list_item.xml
@@ -30,6 +30,7 @@
         android:layout_weight="1" />
 
     <ImageButton
+        android:id="@+id/list_item_minus_imageButton"
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="0.5"
