--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -17,40 +17,64 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="3"
-            android:weightSum="7"
-            android:orientation="vertical">
-            <TextView
-                android:id="@+id/maxMoneyTextView"
-                android:layout_width="wrap_content"
+            android:orientation="vertical"
+            android:weightSum="7">
+
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="1"
-                android:hint="예산안"
-                android:layout_gravity="right"
-                android:textSize="16dp"
-                android:textStyle="bold"
-                android:layout_marginRight="16dp"/>
+                android:weightSum="10">
+                <Button
+                    android:id="@+id/logoutButton"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:text="로그아웃"
+                    android:textSize="9dp"
+                    android:layout_weight="1.5"
+                    android:textColor="#543900"
+                    android:background="@drawable/buttonshape"
+                    android:textStyle="bold"
+                    />
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="5.5"/>
+
+                <TextView
+                    android:id="@+id/maxMoneyTextView"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_marginRight="8dp"
+                    android:layout_weight="3"
+                    android:hint="예산안"
+                    android:textFontWeight="2"
+                    android:textSize="16dp"
+                    android:gravity="center"
+                    android:textStyle="bold" />
+            </LinearLayout>
 
             <SeekBar
                 android:id="@+id/seekBar1"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_gravity="bottom"
+                android:layout_weight="3"
                 android:max="200"
                 android:maxWidth="40dp"
                 android:progress="50"
                 android:progressDrawable="@drawable/seekbar"
-                android:layout_weight="3"
-                android:thumb="@drawable/cur"/>
-<!--
-            <ProgressBar
-                android:id="@+id/progress"
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="3"
-                style="@android:style/Widget.ProgressBar.Horizontal"
-                android:progress="20"
-                />
--->
+                android:thumb="@drawable/cur" />
+            <!--
+                        <ProgressBar
+                            android:id="@+id/progress"
+                            android:layout_width="match_parent"
+                            android:layout_height="0dp"
+                            android:layout_weight="3"
+                            style="@android:style/Widget.ProgressBar.Horizontal"
+                            android:progress="20"
+                            />
+            -->
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
@@ -61,8 +85,8 @@
                     android:id="@+id/curMoney"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textStyle="bold"
-                    android:hint="현재 금액 "/>
+                    android:hint="현재 금액 "
+                    android:textStyle="bold" />
             </LinearLayout>
 
             <Button
