--- a/app/src/main/res/layout/in_cart_list_item.xml
+++ b/app/src/main/res/layout/in_cart_list_item.xml
@@ -21,12 +21,15 @@
         android:id="@+id/itemOrigin"
         android:layout_width="0dp"
         android:layout_height="match_parent"
+        android:textAlignment="center"
+        android:hint="1"
         android:layout_weight="1" />
 
     <TextView
         android:id="@+id/itemInfo"
         android:layout_width="0dp"
         android:layout_height="match_parent"
+        android:textAlignment="center"
         android:layout_weight="1" />
 
     <ImageButton
