--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -25,21 +25,22 @@
                 android:layout_height="0dp"
                 android:layout_weight="1"
                 android:weightSum="10">
+
                 <Button
                     android:id="@+id/logoutButton"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
-                    android:text="로그아웃"
-                    android:textSize="9dp"
                     android:layout_weight="1.5"
-                    android:textColor="#543900"
                     android:background="@drawable/buttonshape"
-                    android:textStyle="bold"
-                    />
+                    android:text="로그아웃"
+                    android:textColor="#543900"
+                    android:textSize="9dp"
+                    android:textStyle="bold" />
+
                 <TextView
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
-                    android:layout_weight="5.5"/>
+                    android:layout_weight="5.5" />
 
                 <TextView
                     android:id="@+id/maxMoneyTextView"
@@ -47,10 +48,10 @@
                     android:layout_height="match_parent"
                     android:layout_marginRight="8dp"
                     android:layout_weight="3"
+                    android:gravity="center"
                     android:hint="예산안"
                     android:textFontWeight="2"
                     android:textSize="16dp"
-                    android:gravity="center"
                     android:textStyle="bold" />
             </LinearLayout>
 
@@ -89,15 +90,32 @@
                     android:textStyle="bold" />
             </LinearLayout>
 
-            <Button
-                android:id="@+id/settingMoneyBtn"
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="0dp"
-                android:layout_gravity="right"
                 android:layout_weight="2"
-                android:background="@drawable/buttonshape"
-                android:text="예산 설정하기"
-                android:textAlignment="center" />
+                android:weightSum="10">
+
+                <EditText
+                    android:id="@+id/barcode"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="7"
+                    android:hint="바코드가 찍히는 부분"
+                    android:maxLength="30" />
+
+
+                <Button
+                    android:id="@+id/settingMoneyBtn"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="right"
+                    android:layout_weight="3"
+                    android:background="@drawable/buttonshape"
+                    android:text="예산 설정하기"
+                    android:textAlignment="center" />
+            </LinearLayout>
+
 
         </LinearLayout>
 
@@ -244,7 +262,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="4"
+            android:layout_weight="2"
             android:orientation="vertical">
 
             <LinearLayout
@@ -284,6 +302,150 @@
                     android:layout_height="match_parent"
                     android:src="@drawable/bulgogi" />
             </LinearLayout>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="2"
+            android:orientation="vertical">
+
+            <TableLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:weightSum="10">
+
+                <TableRow
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="1"
+                    android:background="#f0ffff"
+                    android:gravity="center"
+                    android:stretchColumns="*"
+                    android:weightSum="3">
+
+                    <TextView
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:gravity="center"
+                        android:text="한성마트" />
+
+                    <TextView
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:gravity="center"
+                        android:text="A사" />
+
+                    <TextView
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:gravity="center"
+                        android:text="B사" />
+                </TableRow>
+
+                <TableRow
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="3"
+                    android:gravity="center"
+                    android:stretchColumns="*"
+                    android:weightSum="3">
+
+                    <TextView
+                        android:id="@+id/hansungMart_product_name_editText"
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:gravity="center"
+                        android:hint="제품 이름" />
+
+                    <TextView
+                        android:id="@+id/A_product_name_editText"
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:gravity="center"
+                        android:hint="제품 이름" />
+
+                    <TextView
+                        android:id="@+id/B_product_name_editText"
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:gravity="center"
+                        android:hint="제품 이름" />
+                </TableRow>
+
+                <TableRow
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="3"
+                    android:gravity="center"
+                    android:stretchColumns="*"
+                    android:weightSum="3">
+
+                    <TextView
+                        android:id="@+id/hansungMart_product_price_editText"
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:gravity="center"
+                        android:hint="제품 가격" />
+
+                    <TextView
+                        android:id="@+id/A_product_price_editText"
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:gravity="center"
+                        android:hint="제품 가격" />
+
+                    <TextView
+                        android:id="@+id/B_product_price_editText"
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:gravity="center"
+                        android:hint="제품 가격" />
+                </TableRow>
+
+                <TableRow
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="3"
+                    android:gravity="center"
+                    android:stretchColumns="*"
+                    android:weightSum="3">
+
+                    <TextView
+                        android:id="@+id/hansungMart_product_result_editText"
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:gravity="center"
+                        android:hint="결과" />
+
+                    <TextView
+                        android:id="@+id/A_product_result_editText"
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:gravity="center"
+                        android:hint="결과" />
+
+                    <TextView
+                        android:id="@+id/B_product_result_editText"
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:gravity="center"
+                        android:hint="결과" />
+                </TableRow>
+            </TableLayout>
 
         </LinearLayout>
     </LinearLayout>
