--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -84,7 +84,7 @@
                             android:layout_margin="2dp"
                             android:background="#00ff0000"
                             android:gravity="center"
-                            android:src="@drawable/twotwo" />
+                            android:src="@drawable/oneone"/>
 
                         <ImageButton
                             android:id="@+id/button3"
@@ -93,7 +93,7 @@
                             android:layout_margin="2dp"
                             android:background="#00ff0000"
                             android:gravity="center"
-                            android:src="@drawable/threethree" />
+                            android:src="@drawable/oneone" />
                     </TableRow>
 
                     <TableRow
@@ -180,7 +180,7 @@
                             android:layout_margin="2dp"
                             android:gravity="center"
                             android:background="#00ff0000"
-                            android:src="@drawable/zero" />
+                            android:src="@drawable/oneone" />
 
                         <ImageButton
                             android:id="@+id/button11"
