--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -103,6 +103,7 @@
                     android:layout_weight="7"
                     android:hint="바코드가 찍히는 부분"
                     android:imeOptions="actionDone"
+
                     android:maxLength="30" />
 
 
@@ -139,8 +140,8 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="9"
-                    android:text="내가 카트에 담은 상품"
-                    android:textSize="20dp"
+                    android:text=" 내가 카트에 담은 상품"
+                    android:textSize="19dp"
                     android:textStyle="bold" />
 
                 <ImageButton
@@ -219,31 +220,35 @@
                         <TextView
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
-                            android:layout_weight="1.5"
-                            android:text="    이름" />
+                            android:layout_weight="1"
+                            android:textAlignment="center"
+                            android:text="이름" />
 
                         <TextView
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
-                            android:text="  가격" />
+                            android:textAlignment="center"
+                            android:text="가격" />
 
                         <TextView
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
+                            android:textAlignment="center"
                             android:text=" 수량" />
 
                         <TextView
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
-                            android:text="  설명" />
+                            android:textAlignment="center"
+                            android:text="설명" />
 
                         <TextView
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
-                            android:layout_weight="0.5"
+                            android:layout_weight="1"
                             android:text="삭제"
                             android:textAlignment="center" />
                     </TableRow>
