--- a/app/src/main/res/layout/in_cart_list_item.xml
+++ b/app/src/main/res/layout/in_cart_list_item.xml
@@ -9,12 +9,14 @@
         android:id="@+id/itemName"
         android:layout_width="0dp"
         android:layout_height="match_parent"
-        android:layout_weight="1.5" />
+        android:textAlignment="center"
+        android:layout_weight="1" />
 
     <TextView
         android:id="@+id/itemPrice"
         android:layout_width="0dp"
         android:layout_height="match_parent"
+        android:textAlignment="center"
         android:layout_weight="1" />
 
     <TextView
@@ -36,6 +38,10 @@
         android:id="@+id/list_item_minus_imageButton"
         android:layout_width="0dp"
         android:layout_height="match_parent"
-        android:layout_weight="0.5"
-        android:background="@drawable/minus" />
+        android:layout_weight="1"
+        android:background="@drawable/minus"
+        android:maxHeight="32px"
+        android:maxWidth="32px"
+        android:adjustViewBounds="true"
+        android:scaleType="fitCenter"/>
 </LinearLayout>
