--- a/app/src/main/res/layout/login_sample.xml
+++ b/app/src/main/res/layout/login_sample.xml
@@ -194,7 +194,7 @@
                             android:layout_margin="2dp"
                             android:background="#00ff0000"
                             android:gravity="center"
-                            android:src="@drawable/deletedeletedelete" />
+                            android:src="@drawable/delete" />
                     </TableRow>
                 </TableLayout>
             </LinearLayout>
