--- a/app/src/main/res/layout/setting_money_dialog.xml
+++ b/app/src/main/res/layout/setting_money_dialog.xml
@@ -26,7 +26,7 @@
             android:layout_height="match_parent"
             android:layout_weight="2"
             android:gravity="center"
-            android:text="계획하신 예산을 입력해주세요."
+            android:text="계획하신 예산을 \n 입력해주세요.♥"
             android:textSize="18dp" />
     </LinearLayout>
 
@@ -43,7 +43,8 @@
             android:id="@+id/budgetText"
             android:layout_width="0dp"
             android:layout_weight="5"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:inputType="number"/>
 
         <TextView
             android:layout_width="0dp"
