--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -56,7 +56,7 @@
                     android:layout_height="match_parent"
                     android:hint="010-"
                     android:textSize="40dp"
-                    android:textColor="#9932cc"/>
+                    android:textColor="#800080"/>
             </LinearLayout>
 
             <LinearLayout
